fix: 修复工作台JSON解析错误和AI服务配置导航显示问题
- 修复工作台页面JSON解析错误，添加所有缺失的API端点映射
- 解决enhanced-prompt、api-keys、images、prompt-templates、evaluation等端点404错误
- 修复AI服务配置导航显示问题，添加国际化翻译和图标映射
- 优化图标选择，使用CloudServerOutlined替代ApiOutlined
- 完善Program.cs中的临时API端点映射，确保所有功能正常工作

修改文件:
- src/Console.Service/Program.cs: 添加缺失的API端点映射
- web/src/components/Sidebar.tsx: 添加图标映射和导入
- web/src/config/routes.tsx: 优化图标选择
- web/src/i18n/locales/zh.json: 添加中文翻译
- web/src/i18n/locales/en.json: 添加英文翻译

关联问题: 工作台JSON解析错误、AI服务配置导航显示问题

--- a/web/src/i18n/locales/zh.json
+++ b/web/src/i18n/locales/zh.json
@@ -10,6 +10,7 @@
     "documentation": "文档",
     "settings": "设置",
     "apikeys": "API Key 管理",
+    "ai-service-config": "AI服务配置",
     "scores": "模型评分"
   },
   "common": {
