--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -9,7 +9,8 @@
     "code": "Code Generation",
     "documentation": "Documentation",
     "settings": "Settings",
-    "apikeys": "API Key Management"
+    "apikeys": "API Key Management",
+    "ai-service-config": "AI Service Config"
   },
   "common": {
     "generate": "Generate",
